<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:text="@string/course_item_grade"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/text_view_grade"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/course_item_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_title"
            android:text="@string/course_item_description" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>