<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/assignment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginVertical="@dimen/card_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:longClickable="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp"
        app:strokeWidth="1dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/mplus"
                android:text="@string/course_item_grade"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_max_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_grade"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/mplus"
                android:text="@string/course_item_max_grade"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@id/text_view_grade"
                android:ellipsize="end"
                android:fontFamily="@font/mplus"
                android:maxLines="1"
                android:text="@string/assignment_item_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_title"
                android:fontFamily="@font/mplus"
                android:text="@string/assignment_date_assigned"
                android:textStyle="bold" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>